--- a/chat.html
+++ b/chat.html
@@ -56,7 +56,7 @@ opacity: 0.5;
 flex-basis: 20%;
     border: none;
     position: relative;
-    bottom: -57px;
+    bottom: -56px;
     font-size: 10px;
     background: black;
     width: 50px;
@@ -205,10 +205,9 @@ left: -90px;
 
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#">About</a>
-  <a href="#">Services</a>
-  <a href="#">Clients</a>
-  <a href="#">Contact</a>
+  <a href="index.html">Home</a>
+  <a href="chat.html">Chat-Room</a>
+	<a href="#">More Soon</a>
 </div>
 <span style="font-size:30px;cursor:pointer" class= "open"
 onclick="openNav()">&#9776; </span>
