--- a/chat.html
+++ b/chat.html
@@ -156,8 +156,7 @@ height: 6vh;
   width: 0;
   position: fixed;
   z-index: 1;
-  background-color: light gray;
-
+  background: none;
   top: 78px;
 
 color: white;
@@ -176,6 +175,7 @@ color: white;
   font-size: 25px;
   color: black;
   display: block;
+	background: none;
   transition: 0.3s;
 }
 .sidenav .closebtn {
