--- a/chat.html
+++ b/chat.html
@@ -178,6 +178,10 @@ color: white;
 	background: none;
   transition: 0.3s;
 }
+	.sidenav a:hover{
+		background: none;
+	}
+
 .sidenav .closebtn {
   position: absolute;
   top: 0;
