--- a/chat.html
+++ b/chat.html
@@ -55,7 +55,7 @@ opacity: 0.5;
 .btn{
 flex-basis: 20%;
     border: none;
-    position: relative;
+    position: fixed;
     bottom: -56px;
     font-size: 10px;
     background: black;
