--- a/chat.html
+++ b/chat.html
@@ -57,7 +57,7 @@ opacity: 0.5;
     position: relative;
     bottom: -56px;
     font-size: 10px;
-    background: black;
+    background: white;
     width: 50px;
     height: 69.3px;
     border-radius: 0px;
@@ -224,7 +224,7 @@ onclick="openNav()">&#9776; </span>
 
           <input id="message-input" placeholder="Type Your Message Here…" type="text" maxlength="30">
 
-            <button id="message-input" type="submit" class="btn">Send-></button>
+            <button id="message-input" type="submit" class="btn">--></button>
 
 
 </form>
