--- a/chat.html
+++ b/chat.html
@@ -61,8 +61,8 @@ opacity: 0.5;
     width: 50px;
     height: 69.3px;
     border-radius: 0px;
-    color: gray;
-    opacity: 0.5;
+    color: black;
+	
     font-family: 'Poppins', sans-serif;
 
 }
