--- a/chat.html
+++ b/chat.html
@@ -57,7 +57,7 @@ opacity: 0.5;
     position: relative;
     bottom: -56px;
     font-size: 10px;
-    background: white;
+    background: none;
     width: 50px;
     height: 69.3px;
     border-radius: 0px;
